# VirtualVulkan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  generate.py
commons/: CMakeLists.txt  README.md  bidi_stream.cpp  bidi_stream.h  remote_call.cpp  remote_call.h  synchronized_bidi_stream.h
driver/: CMakeLists.txt  README.md  driver.cpp  function_loading.cpp  function_loading.h  functions.cpp  functions.h  mem_management.h
driver/manifests/: linux.json
layer/: CMakeLists.txt  README.md  context.cpp  context.h  dispatchable_object.h  function_loading.cpp  function_loading.h  functions.cpp  functions.h  layer.cpp  presentation.cpp  presentation.h  sempahore_handle.h  utils.cpp  utils.h  vma_initializer.cpp  wsi_support.h
layer/context/: device.cpp  device.h  fence_pool.cpp  fence_pool.h  instance.cpp  instance.h  mapped_memory.cpp  mapped_memory.h  swapchain.cpp  swapchain.h
layer/functions/: buffer.cpp  command_pool.cpp  commands.cpp  descriptors.cpp  device.cpp  fence.cpp  function_loading.cpp  image.cpp  instance.cpp  memory.cpp  physical_device.cpp  pipeline.cpp  presentation.cpp  queue.cpp  rendering.cpp  semaphore.cpp
layer/manifests/: linux.json
layer/presentation/: frame_stream.cpp  frame_stream.h  h264_frame_stream.cpp  h264_frame_stream.h  jpeg_frame_stream.cpp  jpeg_frame_stream.h  memory_to_image_copy.cpp  memory_to_image_copy.h  uncompressed_frame_stream.cpp  uncompressed_frame_stream.h
proto/: CMakeLists.txt  README.md  vvk_presentation.proto  vvk_server.proto  vvk_types.proto  vvk_write_memory.proto
scripts/: README.md  client_generator.py  commons.py  generator.py  layer_generator.py  proto_generator.py  server_generator.py  vvk_generator.py
server/: CMakeLists.txt  encoder.h  execution_context.h  function_execution.cpp  function_execution.h  h264_encoder.cpp  h264_encoder.h  implementations.cpp  implementations.h  jpeg_encoder.h  main.cpp  manual_implementations.cpp  manual_implementations.h  presentation_context.h  server.cpp  server.h
shaders/: rgb_to_ycrcb_2plane.comp
tests/: CMakeLists.txt  README.md
tests/command-buffer-creation/: main.cpp
tests/device-creation/: main.cpp
tests/device-creation-drv/: main.cpp
tests/image-creation/: main.cpp
tests/instance-creation/: main.cpp
tests/memory-allocation/: main.cpp
tests/physical-device-listing/: main.cpp
tests/pnext-chains/: main.cpp
